--- a/8383/Sakharov/pr/3/project.ipynb
+++ b/8383/Sakharov/pr/3/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "comfortable-season",
+   "id": "taken-smart",
    "metadata": {},
    "source": [
     "### Задание \n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absolute-interim",
+   "id": "earlier-october",
    "metadata": {},
    "source": [
     "### Импорт"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "threaded-soldier",
+   "id": "constitutional-mountain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painful-eligibility",
+   "id": "indian-tablet",
    "metadata": {},
    "source": [
     "### Считаем моду в каждой строке"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "angry-gibson",
+   "id": "medieval-paste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaging-haven",
+   "id": "varying-perspective",
    "metadata": {},
    "source": [
     "### Пример выполнения"
@@ -60,47 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "revolutionary-stereo",
+   "execution_count": 4,
+   "id": "pacific-welding",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-3  0 -1  3 -4  3 -1  3  3  0]\n",
-      " [ 2  3  1 -2 -3 -3  2  0  0 -2]\n",
-      " [-4  1  3 -4  0 -3  2 -2  3  3]\n",
-      " [-4  2  0  3 -1  2 -3  0  0 -4]\n",
-      " [-3  1  3  1 -4  3 -4  3 -2  1]\n",
-      " [ 3 -2 -2  1 -3 -2  2 -2  0  0]\n",
-      " [ 2 -3 -4 -1 -4 -4 -2  0  1 -3]\n",
-      " [ 2 -1  2  0 -2 -2 -3 -1  3  3]\n",
-      " [-1 -2  0 -1 -1  3  2 -4 -1 -2]\n",
-      " [-3  3  1 -1 -1  1 -1 -2  1 -2]]\n"
+      "[[1. 4. 8. 8.]\n",
+      " [2. 2. 8. 8.]\n",
+      " [1. 3. 5. 2.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 3.]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[3, 2, 3, 0, 1, -2, -4, 2, -1, 1]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = np.random.randint(-4,4,size=(10,10))\n",
+    "#m = np.random.randint(-4,4,size=(10,10))\n",
+    "m = np.loadtxt(\"v9.txt\")\n",
     "print(m)\n",
-    "f(m)"
+    "np.savetxt(\"v9_result.txt\",f(m))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liquid-eugene",
+   "id": "accepting-toronto",
    "metadata": {},
    "outputs": [],
    "source": []
